# OpenConstructionEstimate-DDC-CWICR

./: .gitignore  README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh.md
0_Workflow and Pipelines CWICR/: .env.example
0_Workflow and Pipelines CWICR/2_n8n_Pipelines_Cost_Calculation/: n8n_1_Telegram_Bot_Cost_Estimates_and_Rate_Finder_TEXT_DDC_CWICR.json  n8n_2_Photo_Cost_Estimate_DDC_CWICR.json  n8n_3_Telegram_Bot_Cost_Estimates_and_Rate_Finder_TEXT_PHOTO_PDF_DDC_CWICR.json  n8n_4_CAD_(BIM)_Cost_Estimation_Pipeline_4D_5D_with_DDC_CWICR.json
0_Workflow and Pipelines CWICR/javascript/: package.json
0_Workflow and Pipelines CWICR/n8n-guides/: README.md  workflow-2-photo-estimate.md  workflow-4-cad-bim-pipeline.md
0_Workflow and Pipelines CWICR/rust/02-qdrant-search/: Cargo.toml  README.md
0_Workflow and Pipelines CWICR/rust/02-qdrant-search/src/: main.rs
AI_INSTRUCTIONS/: ANTIGRAVITY.md  CLAUDE.md  INSTRUCTIONS.md  OPENCODE.md
AR___DDC_CWICR/: ddc_ar_dubai.snapshot
DE___DDC_CWICR/: ddc_de_berlin.snapshot
EN___DDC_CWICR/: ddc_en_toronto.snapshot
ES___DDC_CWICR/: ddc_sp_barcelona.snapshot
FR___DDC_CWICR/: ddc_fr_paris.snapshot
HI___DDC_CWICR/: ddc_hi_mumbai.snapshot
PT___DDC_CWICR/: ddc_pt_saopaulo.snapshot
RU___DDC_CWICR/: REGIONAL_PRICING_PIPELINE.md  ddc_ru_stpetersburg.snapshot
UK___DDC_CWICR/: ddc_uk_gbp.snapshot
US___DDC_CWICR/: ddc_usa_usd.snapshot
ZH___DDC_CWICR/: ddc_zh_shanghai.snapshot
examples/: README.md
examples/rust/: Cargo.toml
(+60 files in other folders)
