[package]
name = "qdrant-search"
version = "0.1.0"
edition = "2021"
description = "Search DDC-CWICR Qdrant collection from Rust"

[dependencies]
qdrant-client = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
